tests/baselines/reference/stringLiteralTypesTypePredicates01.errors.txt
stringLiteralTypesTypePredicates01.ts(9,5): error TS2322: Type 'undefined' is not assignable to type 'Kind'.


==== stringLiteralTypesTypePredicates01.ts (1 errors) ====
    type Kind = "A" | "B"
    
    function kindIs(kind: Kind, is: "A"): kind is "A";
    function kindIs(kind: Kind, is: "B"): kind is "B";
    function kindIs(kind: Kind, is: Kind): boolean {
        return kind === is;
    }
    
    var x: Kind = undefined;
        ~
!!! error TS2322: Type 'undefined' is not assignable to type 'Kind'.
    
    if (kindIs(x, "A")) {
        let a = x;
    }
    else {
        let b = x;
    }
    
    if (!kindIs(x, "B")) {
        let c = x;
    }
    else {
        let d = x;
    }